<?xml version="1.0"?>
<package format="2">
  <!-- TODO: name your ros package according to CMakeLists.txt -->
  <name><!-- ############ --></name>
  <version>0.0.0</version>
  <description>my awesome tutorial node</description>
  <maintainer email="kelvinkang@cmu.edu">kelvinkang</maintainer>
  <license>Confidential and Restricted</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <!-- TODO: since you are using std_msgs, add it into the build and exec depends -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>